--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "cross-env CI=false react-scripts build",
+    "build": "cross-env CI=false react-scripts build --output public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
