Fix build errors

--- a/vercel.json
+++ b/vercel.json
@@ -21,5 +21,11 @@
       "src": "server.js",
       "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "frontend/build/$1"
+    }
   ]
 }
