--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
   "version": 2,
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "https://online-voting-platform-n1wd.vercel.app/api/:path*"
-    }
-  ],
   "env": {
     "API_URL": "https://online-voting-platform-n1wd.vercel.app"
   },
@@ -22,10 +16,10 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "frontend/build/$1"
+      "source": "/(.*)",
+      "destination": "/frontend/build/$1"
     }
   ]
 }
