--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,24 @@
 {
   "version": 2,
-  "env": {
-    "API_URL": "https://online-voting-platform-n1wd.vercel.app"
-  },
   "builds": [
     {
       "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/build" 
-      }
+      "use": "@vercel/react"
     },
     {
       "src": "server.js",
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/frontend/build/$1"
+      "src": "/(.*)",
+      "dest": "frontend/build/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "server.js"
     }
-  ]
+  ],
+  "outputDirectory": "frontend/build"
 }
