Fix build errors

--- a/vercel.json
+++ b/vercel.json
@@ -23,8 +23,8 @@
       "destination": "/frontend/build/$1"
     },
     {
-      "src": "/api/(.*)",
-      "dest": "server.js"
+      "source": "/api/(.*)",
+      "destination": "server.js"
     }
   ]
 }
