--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8000
-MONGODB_URI=  mongodb+srv://maavi6258:mayankmongodb@cluster0.fhs7d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=  mongodb+srv://maavi6258:mayankmongodb@cluster0.fhs7d.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 CORS_ORIGIN = *
 JWT_SECRET = uiwic7egccv
 ACCESS_TOKEN_SECRET = gfhvGF567Ft68gRF75Fyg78tF6Y7gt78T8V
