Your commit message

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8000
 MONGODB_URI=  mongodb+srv://maavi6258:mayankmongodb@cluster0.fhs7d.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
-CORS_ORIGIN = *
+CORS_ORIGIN = https://online-voting-platform-4iqo.onrender.com
 JWT_SECRET = uiwic7egccv
 ACCESS_TOKEN_SECRET = gfhvGF567Ft68gRF75Fyg78tF6Y7gt78T8V
 ACCESS_TOKEN_EXPIRY = 1d
